implementacion de Card HubSpot